<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SECOND"
            android:layout_width=""
            android:layout_height="100dp"
            android:text="@string/secondteam"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scoreforteamb"
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:text="@string/scoreforteamb"
            android:textAlignment="center"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/teambdown"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:text="@string/teambdown"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="131dp"
            android:layout_height="100dp"
            android:text="@string/teambup"
            android:textSize="30sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/FIRST"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/firstteam"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/scoreforteama"
            android:layout_width="131dp"
            android:layout_height="100dp"

            android:text="@string/scoreforteama"
            android:textAlignment="center"
            android:textSize="30sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/teamaup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/teamaup"
            android:textSize="30sp" />

        <Button
            android:id="@+id/teamadown"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/teamadown"
            android:textSize="30sp" />

    </TableRow>
    <RadioGroup
        android:id="@+id/roundingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <RadioButton
        android:id="@+id/noRoundingRadioButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/icrBy1"
        android:textAlignment="center"
        android:textSize="30sp" />

    <RadioButton
        android:id="@+id/roundTipRadioButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:text="@string/icrBy2"
        android:textAlignment="center"
        android:textSize="30sp" />


</TableLayout>

